# kioto

./: .dprintrc.json  .gitignore  Cargo.toml  README.md
config/: default.hjson
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md  self-hosting.md
migrations/00000000000000_diesel_initial_setup/: up.sql
src/: main.rs  routes.rs  settings.rs  util.rs
src/api/: auth.rs  test.rs
src/discord/: mod.rs  util.rs
src/discord/commands/: general.rs
src/discord/commands/general/: mod.rs  ping.rs
src/routes/: api.rs  mod.rs
web/: README.md  package.json  vue.config.js
web/pages/: _app.tsx  index.tsx
web/public/: index.html
web/src/: App.vue  main.ts  registerServiceWorker.ts
web/src/components/: Card.vue  Footer.vue  Navigation.vue
web/src/router/: index.ts
web/src/styles/: _variables.scss
web/src/views/: Home.vue
web/styles/: Home.module.css
