[package]
name = "kioto"
version = "0.1.0"
authors = ["Alex P. <alexeek@protonmail.com>"]
repository = "https://github.com/fjah/kioto"
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
env_logger = "0.7.1"
config = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.11"
tokio = { version = "0.2", features = ["full"] }
serenity = { git = "https://github.com/acdenisSK/serenity", branch = "await_next" }
lazy_static = "1.4.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
r2d2 = "0.8.9"
oauth2 = "4.0.0-alpha.1"
actix-session = "0.3"